--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,44 +5,15 @@
     overflow-x: hidden;
 }
 
-.button-63 {
-  align-items: center;
-  background-image: linear-gradient(144deg,#743c6f, #5089af 50%,#743c6f);
-  border: 0;
-  border-radius: 8px;
-  box-shadow: rgba(24, 3, 48, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: flex;
-  font-family: Phantomsans, sans-serif;
-  font-size: 20px;
-  justify-content: center;
-  line-height: 1em;
-  max-width: 100%;
-  min-width: 140px;
-  padding: 19px 24px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
-  position: relative;
-}
-.button-63:active,
-
-.button-63:hover {
-  outline: 0;
-}
-
 .container-background{
     height: 100vh;
     width: 100%;
-    background: linear-gradient(45deg, #0c012b, #1f0885, #079afc,#c93dbd,#41023b);
+    background: linear-gradient(45deg, #0c012b, #1f0885, #079afc,#1f0885,#0c012b);
     background-size: 300% 300%;
     animation: color 12s ease-in-out infinite;
+    position: absolute;
 }
-
+ 
 @keyframes color{
     0%{
         background-position: 0% 50%;
@@ -53,4 +24,75 @@
     100%{
         background-position: 0 50%;
     }
+}
+
+.button-63 {
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border: black;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+  margin-left: 90vh;
+  margin-top: 38vh;
+}
+
+.button-63:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+.button-63:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.button-63:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.button-63:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-63:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.button-63:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-63:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.button-63:disabled {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
