--- a/website/frontend/style.css
+++ b/website/frontend/style.css
@@ -5,7 +5,7 @@
   overflow-x: hidden;
 }
 
-.container-background {
+.background {
   height: 100vh;
   width: 100%;
   background: linear-gradient(
