--- a/website/frontend/styles_two.css
+++ b/website/frontend/styles_two.css
@@ -1,6 +1,19 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(
+    45deg,
+    rgb(150, 216, 244),
+    #8e82c0,
+    #2f3f97,
+    #8e82c0,
+    rgb(150, 216, 244)
+  );
+  background-size: 300% 300%;
+  animation: color 12s ease-in-out infinite;
+  overflow-x: hidden;
 }
 
 header {
@@ -14,6 +27,9 @@ header {
   );
   color: #fff;
   padding: 20px;
+  position: top;
+  width: 100%;
+  margin-top: 20px;
 }
 
 h1 {
@@ -22,6 +38,13 @@ h1 {
 
 #content {
   margin: 20px;
+}
+
+h2 {
+  color: rgb(255, 255, 255);
+  text-align: left;
+  margin-left: 100px;
+  font-size: 18;
 }
 
 footer {
@@ -38,4 +61,34 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+form {
+  max-width: 100%;
+  width: 400px;
+  margin-top: 20px;
+}
+
+.input {
+  font-size: 1rem;
+  padding: 5px 25px;
+  display: block;
+  width: 50%;
+  margin-top: 20px;
+  border: none;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.input::placeholder {
+  color: #b5b5b5;
+}
+
+.todos {
+  background-color: white;
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+}
+
+.todos li {
 }
