--- a/website/frontend/styles_two.css
+++ b/website/frontend/styles_two.css
@@ -3,16 +3,8 @@ body {
   text-align: center;
   height: 100vh;
   width: 100%;
-  background: linear-gradient(
-    45deg,
-    rgb(150, 216, 244),
-    #8e82c0,
-    #2f3f97,
-    #8e82c0,
-    rgb(150, 216, 244)
-  );
+  background-color: rgb(227, 224, 241);
   background-size: 300% 300%;
-  animation: color 12s ease-in-out infinite;
   overflow-x: hidden;
 }
 
@@ -41,10 +33,11 @@ h1 {
 }
 
 h2 {
-  color: rgb(255, 255, 255);
+  color: rgb(157, 113, 228);
   text-align: left;
   margin-left: 100px;
-  font-size: 18;
+  font-size: 30px;
+  text-decoration: underline;
 }
 
 footer {
